@@ -4,3 +4,4 @@ shape: diamond
 color: green
 size: 
 shape: 
+color size shape 
